# iotdb-client-rust

./: .asf.yaml  .gitignore  Cargo.toml  NOTICE  README.md  README_ZH.md  docker-compose-1c1d.yml  docker-compose.yml
.github/workflows/: ci.yml
examples/: benchmark.rs  session_pool.rs  table_session.rs  tree_session.rs
src/: error.rs  lib.rs
src/client/: dataset.rs  mod.rs  pool.rs  redirect.rs  session.rs  table_session.rs
src/connection/: mod.rs
src/data/: mod.rs  tablet.rs  tsblock.rs
src/protocol/: client.rs  common.rs  mod.rs
tests/fixtures/tls/: README.md  client-cert.pem  client-key.pem
tools/: check-license.sh  generate-thrift.sh
