# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iotdb-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Apache IoTDB client for Rust (tree & table model over Thrift RPC)"
license = "Apache-2.0"
repository = "https://github.com/apache/iotdb-client-rust"
keywords = ["iotdb", "timeseries", "database", "client"]
categories = ["database"]

[dependencies]
thrift = "0.23"
byteorder = "1.5"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
